deployments/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
  namespace: promhub
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: backend
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: promhub
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 3000
